--- a/public/asset-landing-admin/css/sb-admin-2.css
+++ b/public/asset-landing-admin/css/sb-admin-2.css
@@ -40,6 +40,10 @@
   --font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 *,
 *::before,
