--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,16 +4,25 @@
 
 @layer utilities {
     .rotate-animation {
-      animation: spinOnce 0.5s ease-in-out;
+        animation: spinOnce 0.5s ease-in-out;
     }
-  
+
     @keyframes spinOnce {
-      0% {
-        transform: rotate(0deg);
-      }
-      100% {
-        transform: rotate(360deg);
-      }
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
     }
-  }
-  
+}
+
+.navbar-bg {
+    @apply bg-white/80 backdrop-blur-md dark:bg-slate-800/80;
+}
+
+.navbar-fixed-dashboard {
+    @apply fixed top-4 xl:left-[18rem] left-0
+ right-4 z-[1000] rounded-2xl 
+         bg-white/80 dark:bg-slate-800/80 backdrop-blur-md shadow-md;
+}
