--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,7 +22,22 @@
 }
 
 .navbar-fixed-dashboard {
-    @apply fixed top-4 xl:left-[18rem] left-0
- right-4 z-[1000] rounded-2xl 
-         bg-white/80 dark:bg-slate-800/80 backdrop-blur-md shadow-md;
+    @apply fixed top-4 left-[17rem] right-0 z-[1000] rounded-2xl 
+         bg-white/80 dark:bg-slate-800/80 shadow-md;
+}
+
+.hamburger-line {
+    @apply w-[30px] h-[2px] my-2 block bg-primary;
+}
+
+.hamburger-active > span:nth-child(1) {
+    @apply rotate-45;
+}
+
+.hamburger-active > span:nth-child(2) {
+    @apply scale-0;
+}
+
+.hamburger-active > span:nth-child(3) {
+    @apply -rotate-45;
 }
