--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -27,17 +27,12 @@
 }
 
 .hamburger-line {
-    @apply w-[30px] h-[2px] my-2 block bg-primary;
+    @apply w-[30px] h-[2px] my-2 block bg-primary transition-transform duration-200;
 }
 
-.hamburger-active > span:nth-child(1) {
-    @apply rotate-45;
-}
-
-.hamburger-active > span:nth-child(2) {
-    @apply scale-0;
-}
-
+.hamburger-active > span:nth-child(1),
+.hamburger-active > span:nth-child(2),
 .hamburger-active > span:nth-child(3) {
-    @apply -rotate-45;
+    /* Tidak ada rotasi atau scale, hanya contoh efek tambahan jika mau */
+    @apply opacity-80;
 }
